; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_dropcmds.c_owningrel_does_not_exist_skipping.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_dropcmds.c_owningrel_does_not_exist_skipping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NoLock = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"relation \22%s\22 does not exist, skipping\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8**, i8**)* @owningrel_does_not_exist_skipping to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @owningrel_does_not_exist_skipping(i32* %0, i8** %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i8** %2, i8*** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @list_copy(i32* %10)
  %12 = load i32*, i32** %5, align 8
  %13 = call i64 @list_length(i32* %12)
  %14 = sub nsw i64 %13, 1
  %15 = call i32* @list_truncate(i32 %11, i64 %14)
  store i32* %15, i32** %8, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = load i8**, i8*** %6, align 8
  %18 = load i8**, i8*** %7, align 8
  %19 = call i64 @schema_does_not_exist_skipping(i32* %16, i8** %17, i8** %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %37

22:                                               ; preds = %3
  %23 = load i32*, i32** %8, align 8
  %24 = call i32* @makeRangeVarFromNameList(i32* %23)
  store i32* %24, i32** %9, align 8
  %25 = load i32*, i32** %9, align 8
  %26 = load i32, i32* @NoLock, align 4
  %27 = call i32 @RangeVarGetRelid(i32* %25, i32 %26, i32 1)
  %28 = call i32 @OidIsValid(i32 %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %36, label %30

30:                                               ; preds = %22
  %31 = call i8* @gettext_noop(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  %32 = load i8**, i8*** %6, align 8
  store i8* %31, i8** %32, align 8
  %33 = load i32*, i32** %8, align 8
  %34 = call i8* @NameListToString(i32* %33)
  %35 = load i8**, i8*** %7, align 8
  store i8* %34, i8** %35, align 8
  store i32 1, i32* %4, align 4
  br label %37

36:                                               ; preds = %22
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %36, %30, %21
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32* @list_truncate(i32, i64) #1

declare dso_local i32 @list_copy(i32*) #1

declare dso_local i64 @list_length(i32*) #1

declare dso_local i64 @schema_does_not_exist_skipping(i32*, i8**, i8**) #1

declare dso_local i32* @makeRangeVarFromNameList(i32*) #1

declare dso_local i32 @OidIsValid(i32) #1

declare dso_local i32 @RangeVarGetRelid(i32*, i32, i32) #1

declare dso_local i8* @gettext_noop(i8*) #1

declare dso_local i8* @NameListToString(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
